@@ -17,6 +17,9 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+30th October 2014  John Allison (interfaces-V10-00-18)
+- G4UIQt.cc: Added a mutex in ReceiveG4cout and ReceiveG4cerr.
+
 29th October 2014  Laurent Garnier (interfaces-V10-00-16 retagged interfaces-V10-00-17)
 - G4UIQt : 
   o For all methods who need a file, instead of getting the file from current path,
